enable password auth with multi auth

--- a/valeriano-manassero/trino/templates/deployment-coordinator.yaml
+++ b/valeriano-manassero/trino/templates/deployment-coordinator.yaml
@@ -44,7 +44,7 @@ spec:
         - name: schemas-volume
           configMap:
             name: schemas-volume-coordinator
-        {{- if .Values.config.general.authenticationType }}{{- if eq .Values.config.general.authenticationType "PASSWORD" }}
+        {{- if .Values.config.general.authenticationType }}{{- if (contains "PASSWORD" .Values.config.general.authenticationType)  }}
         - name: password-volume
           secret:
             secretName: trino-password-authentication
@@ -205,7 +205,7 @@ spec:
               name: schemas-volume
             - mountPath: {{ .Values.config.general.path }}/catalog
               name: catalog-volume
-            {{- if .Values.config.general.authenticationType }}{{- if eq .Values.config.general.authenticationType "PASSWORD" }}
+            {{- if .Values.config.general.authenticationType }}{{- if (contains .Values.config.general.authenticationType "PASSWORD") }}
             - mountPath: {{ .Values.config.general.path }}/auth
               name: password-volume
             {{- end }}{{- end }}
