--- a/valeriano-manassero/trino/templates/secret.yaml
+++ b/valeriano-manassero/trino/templates/secret.yaml
@@ -12,7 +12,7 @@ data:
 {{- end }}
 {{- end }}
 ---
-{{- if .Values.config.general.authenticationType }}{{- if eq .Values.config.general.authenticationType "PASSWORD" }}
+{{- if .Values.config.general.authenticationType }}{{- if (contains "PASSWORD" .Values.config.general.authenticationType) }}
 apiVersion: v1
 kind: Secret
 metadata:
